modificacion urgente en hotfix de index

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-
+<!-- no se que cambios realizar en el punto 12 tampoco F -->
 <head>
   <!-- Meta Tags de encode del sitio -->
   <meta charset="utf-8" />
