se edita index desde issue1

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-
+  <!-- No sé que modificar en el punto nuemro 10 xd no fui a clases ni jueves ni viernes por una cuestion legal que tenia que atender F -->
 <head>
   <!-- Meta Tags de encode del sitio -->
   <meta charset="utf-8" />
